<resources>
    <string name="app_name">MCKuai7</string>
    <string name="action_settings">Settings</string>
    <string name="dbname">MCData.db</string>
    <string name="emptyview_hint">暂时没有数据！</string>
    <string name="hint_loading">正在加载！</string>
    <string name="activity_boot">启动页</string>
    <string name="activity_leady">引导页</string>
    <string name="activity_main">主页</string>
    <string name="activity_createcartoon">创建漫画</string>
    <string name="activity_cartoondetial">漫画细节</string>
    <string name="activity_conversation">聊天对话</string>
    <string name="activity_conversationlist">聊天列表</string>
    <string name="activity_login">登录</string>
    <string name="activity_postdetial">帖子详情</string>
    <string name="activity_profile">设置</string>
    <string name="activity_createpost">创建帖子</string>
    <string name="activity_search">搜索</string>
    <string name="activity_usercenter">个人中心</string>
    <string name="activity_recommend">推荐</string>
    <string name="fragment_mine">我的</string>
    <string name="fragment_cartoon">推荐动漫</string>
    <string name="fragment_chat">聊天会话列表</string>
    <string name="fragment_community">社区</string>
    <string name="fragment_createcartoon">创建漫画</string>
    <string name="fragment_profile">设置</string>
    <string name="fragment_recommend">私你</string>
    <string name="fragment_theme">选择主题</string>
    <string name="preferences_filename">config</string>
    <string name="preferences_isFirstBoot">FIRSTBOOT</string>
    <string name="preferences_token">TOKEN</string>
    <string name="preferences_tokentime">CERTIFIEDTIME</string>
    <string name="preferences_tokenexpires">INVALIDTIME</string>
    <string name="preferences_tokentype">TOKENTYPE</string>
    <string name="preferences_token_rongcloud">RONGCLOUD_TOKEN</string>
    <string name="preferences_id">USER_ID</string>
    <string name="preferences_level">USER_LEVEL</string>
    <string name="preferences_process">MC_PROCESS</string>
    <string name="preferences_addr">MC_ADDR</string>
    <string name="preferences_cover">USER_COVER</string>
    <string name="preferences_username">USER_NAME</string>
    <string name="preferences_nickname">USER_NICKNAME</string>
    <string name="preferences_gender">USER_GENDER</string>
    <string name="preferences_score">SCORE</string>
    <string name="preferences_wa_score">WA_SCORE</string>
    <string name="preferences_wa_answercount">WA_ANSERCOUNT</string>
    <string name="preferences_wa_uploadcount">WA_UPLOADCOUNT</string>
    <string name="preferences_wa_scorerank">WA_SCORERANK</string>
    <string name="preferences_wa_ranking">WA_RANKING</string>
    <string name="preferences_leadtag">LEAD_TAG</string>
    <string name="error_pretreatmentres_ponsefalse">预解析失败，原因:%1$s</string>
    <string name="error_pretreatmentres_nullerror">返回数据为空或长度不足！</string>
    <string name="error_pretreatmentres_format">预解析失败，原因未知！</string>
    <string name="error_serverfalse_unknow">服务器返回失败，原因未知！</string>
    <string name="error_serverfalse">服务器返回失败，原因:%1$s</string>
    <string name="error_parsefalse">解析返回数据时失败，请重试！</string>
    <string name="error_requestfalse">请求失败，原因：%1$s</string>
    <string name="error_userformat_noself">返回的用户信息不正确！</string>
    <string name="error_serverreturn_unkonw">服务器返回数据格式不正确！</string>
    <string name="error_loginfaile_mc">登录到服务器失败，原因：%1$s</string>
    <string name="error_loginfaile_wx">微信授权失败，请重试！</string>
    <string name="error_code">错误代码：%1$d</string>
    <string name="cache_root">cache</string>
    <string name="imagecache_dir">image</string>
    <string name="cache_rankinglist">rank.dat</string>
    <string name="preferences_file">config</string>
    <string name="jsoncache_dir">json</string>
    <string name="jsoncache_file">jsonCache.dat</string>
    <string name="createcartoon_next">下一步</string>
    <string name="createcartoon_publish">发布</string>
    <string name="action_main_recommend">推荐</string>
    <string name="createcartoon">创作</string>
    <string name="interface_domainName">http://api.mckuai.com/</string>
    <string name="interface_search">interface.do?act=search</string>
    <string name="interface_forumlist">interface.do?act=forumList</string>
    <string name="interface_postlist">interface.do?act=talkList</string>
    <string name="interface_showPost">interface.do?act=talkOne</string>
    <string name="interface_reward">interface.do?act=daShang</string>
    <string name="interface_reward_new">interface.do?act=like</string>
    <string name="interface_collectpost">interface.do?act=toCollect</string>
    <string name="interface_collectpostlist">interface.do?act=collectTalk</string>
    <string name="interface_cancle_collectpost">interface.do?act=cancleCollect</string>
    <string name="interface_replypost">interface.do?act=followTalk</string>
    <string name="interface_replyfloor">interface.do?act=replyTalk</string>
    <string name="interface_uploadimage">group.do?act=uploadImg</string>
    <string name="interface_uploadimage_cartoon">interface.do?act=uploadCartoonImg</string>
    <string name="interface_uploadpost">interface.do?act=addTalk</string>
    <string name="interface_getpostmark">interface.do?act=isCollect</string>
    <string name="interface_usercenter">interface.do?act=center</string>
    <string name="interface_checkupgread">interface.do?act=androidUpdate</string>
    <string name="interface_login">interface.do?act=login</string>
    <string name="interface_updateLocation">interface.do?act=updateAddr</string>
    <string name="interface_update_userinfo">interface.do?act=saveUser</string>
    <string name="interface_update_cover">interface.do?act=headImg</string>
    <string name="interface_fellowuserlist">interface.do?act=attentionUser</string>
    <string name="interface_fellowuser">interface.do?act=attention</string>
    <string name="interface_cancle_fellowuser">/interface.do?act=cancleAttention</string>
    <string name="interface_getusermark">interface.do?act=isAttention</string>
    <string name="interface_quickreply">interface.do?act=addReplyByCenter</string>
    <string name="interface_uploadcartoon">interface.do?act=uploadCartoon</string>
    <string name="interface_uploadcartoon_withtheme">interface.do?act=uploadCartoonNew</string>
    <string name="interface_pushcartoon">interface.do?act=cartoonRec</string>
    <string name="interface_loadcartoonlist">interface.do?act=cartoonList</string>
    <string name="interface_loadcartoonlist_new">interface.do?act=cartoonListNew</string>
    <string name="interface_uploadcartoonlist">interface.do?act=cartoonWork</string>
    <string name="interface_cartoonmessage">interface.do?act=cartoonMessage</string>
    <string name="interface_cartooncynamic">interface.do?act=cartoonDynamic</string>
    <string name="interface_cartoonwork">interface.do?act=cartoonWork</string>
    <string name="interface_commentcartoon">interface.do?act=toComment</string>
    <string name="itnerface_loadmessage">interface.do?act=cartoonRec</string>
    <string name="interface_cartoondetial">interface.do?act=cartooninfo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_cartoon">漫画</string>
    <string name="nav_chat">聊天</string>
    <string name="nav_community">社区</string>
    <string name="nav_mine">我的</string>
    <string name="cartoon_type_new">最新鲜</string>
    <string name="cartoon_type_hot">最热门</string>
    <string name="community_postlable_new">最新</string>
    <string name="community_postlable_essence">精华</string>
    <string name="community_postlable_top">推荐</string>
    <string name="createcartoon_hint_step1">第二步 创建一个背景</string>
    <string name="createcartoon_hint_step2">第三步 添加人物和工具</string>
    <string name="createcartoon_hint_step3">第四步 添加人物对话</string>
    <string name="createcartoon_hint_step3_1">选择一个人物，为他添加对话</string>
    <string name="createcartoon_hint_step3_2">输入人物对话</string>
    <string name="createcartoon_hint_step4">第四步 发布你的大作</string>
    <string name="createcartoon_hint_step4_1">创作完成了，发布你的大作吧</string>
    <string name="createcartoon_hint_step4_2">起一个名字</string>
    <string name="createcartoon_storage">MC图库</string>
    <string name="createcartoon_photo">我的相册</string>
    <string name="createcartoon_character">人物</string>
    <string name="createcartoon_tool">工具</string>
    <string name="createcartoon_addtalk">发送对话</string>
    <string name="createcartoon_share">同步：</string>
    <string name="login_hint">使用QQ账号登录</string>
    <string name="login_anonymous">>>随便看看</string>
    <string name="login_text">QQ账号登录</string>
    <string name="usercenter_tag_userid">USER_ID</string>
    <string name="usercenter_tag_user">USER_OBJECT</string>
    <string name="usercenter_userlevel">LV %1$d</string>
    <string name="cartoon">漫画</string>
    <string name="community">社区</string>
    <string name="friend">朋友</string>
    <string name="message">消息</string>
    <string name="dynamic">动态</string>
    <string name="work">作品</string>
    <string name="allMessage">全部</string>
    <string name="atMessage">\@你</string>
    <string name="systemMessage">系统消息</string>
    <string name="replyYou">回复你的帖子</string>
    <string name="atYou">\@了你</string>
    <string name="replyPost">回复了</string>
    <string name="createPost">创造了</string>
    <string name="userId">USER_ID</string>
    <string name="addtoPackage">加入背包</string>
    <string name="makeChat">私聊</string>
    <string name="preservation">保存</string>
    <string name="cartoon_comment">评论了</string>
    <string name="cartoon_prise">点赞了</string>
    <string name="cartoondetail_tag_cartoon">CARTOON_OBJECT</string>
    <string name="tag_post">TAG_POST</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="download_failure">下载新版本失败 !</string>
    <string name="is_latest_version_label">已是最新版本！</string>
    <string name="latest_version_title">发现新版本</string>
    <string name="update_latest_version_title">发现新版本(%1$s), 升级中&#8230;</string>
    <string name="later_on_wifi">在wifi网络下自动升级！</string>
    <string name="later_update_tip">Updating&#8230; (Submited when you\'r NOT on Wifi)</string>
    <string name="update">更新</string>
    <string name="ignore">忽略</string>
    <string name="appdownload_url">http://www.mckuai.com/down.html</string>
    <string name="shareCartoon">http://api.mckuai.com/cartoon/</string>
    <string name="setting_user_cover">头像</string>
    <string name="setting_user_nick">昵称：%1$s</string>
    <string name="setting_user_address">地址：%1$s</string>
</resources>